--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="movie-container">
-      <label>Pick a movie</label>
+      <label>Pick a movie:</label>
       <select id="movie">
         <option value="10">Avengers: Endgame ($10)</option>
         <option value="12">Joker ($12)</option>
@@ -94,13 +94,14 @@
         <div class="seat occupied"></div>
         <div class="seat occupied"></div>
       </div>
-      <p class="text">
-        Tou have selected <span id="count">0</span> seats for a price of $<span
-          id="total"
-          >0</span
-        >
-      </p>
     </div>
+
+    <p class="text">
+      Tou have selected <span id="count">0</span> seats for a price of $<span
+        id="total"
+        >0</span
+      >
+    </p>
 
     <script src="scripts.js"></script>
   </body>
